# project3

./: .gitignore  README.md
src/: lidar_processing_node.py  marker_publisher.py
src/package/: CMakeLists.txt  package.xml
src/package/msg/: DetectedPerson.msg  DetectedPersonArray.msg
src/package/src/: lidar_processing_node.py
src/project3/: package.xml  setup.py
src/sim/: package.xml  setup.py
src/turtle_control/: package.xml  setup.py
src/turtle_control/turtle_control/: turtle_control.py
